<resources>
    <string name="app_name">Java Bot</string>

    <string name="appwidget_text">Java Bot</string>
    <string name="add_widget">Add Java Bot Widget</string>

    <!-- Chat Bot -->
    <string name="chat_bot_welcome_message">Hey, how can I help?</string>
    <string name="chat_bot_welcome_back_message">Great, your back</string>
    <string name="chat_bot_no_question_response">Sorry I didn\'t catch that</string>

    <!-- Main Activity Strings -->
    <string name="welcome_messsage">Welcome to JavaBot, Your Helpful Assistant</string>
    <string name="chat_welcome">Hey, how can i help?</string>
    <string name="enter_question">enter question</string>
    <string name="ask_button">ask</string>
    <string name="main_error_message">Connecting to database</string>

    <!-- Notifications -->
    <string name="notification_train_action">train</string>
    <string name="notification_setup_action">disable notifications</string>

    <!-- Menu Strings -->
    <string name="menu_name">Java Bot</string>
    <string name="menu_action_training">Training</string>
    <string name="menu_action_tech_meetups">Tech Meetups</string>
    <string name="menu_action_setup">Setup</string>
    <string name="menu_action_home">Home</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="options_menu_action_refresh">option_menu_action_refresh</string>
    <string name="options_menu_action_close">options_menu_action_refresh</string>

    <!-- Solution Activity Strings -->
    <string name="question_header">Question</string>
    <string name="solution_header">Solution</string>
    <string name="solution_placeholder">Solution</string>
    <string name="question_placeholder">Question</string>
    <string name="solution_success_message">Did that help?</string>

    <!-- Tech Meetups Activity Strings -->
    <string name="tech_meetups_error_message">Connecting to Open Tech Calendar</string>
    <string name="your_location">Your Location</string>
    <string name="tech_meetups_page_header">Tech Meetups</string>
    <string name="no_meet_ups">Sorry there are no meetups in your area here are some in other cities</string>
    <string name="service_not_available">Location service not available</string>
    <string name="invalid_lat_long_used">latitude or longitude invalid</string>
    <string name="no_address_found">No address found for location</string>
    <string name="address_found">Address found for location</string>
    <string name="my_address_hint">My Address</string>
    <string name="no_geocoder_available">no geocoder available</string>
    <string name="city_placeholder">City</string>
    <string name="swipe_notice">swipe for next question</string>

    <!-- Training Activity Strings -->
    <string name="training_session_notification_title">Training Session</string>
    <string name="training_session_notification_content">Hey, a new training session is available!</string>
    <string name="training_message">training message</string>
    <string name="training_complete_message">Training Complete</string>
    <string name="no_question_available">No questions asked since last training session</string>
    <string name="training_header">Training</string>

    <!-- Setup Activity Strings -->
    <string name="setup_header">Setup</string>
    <string name="notifications_placeholder">Training Notifications </string>
    <string name="clear_data_btn">Clear Data</string>
    <string name="problem_deleting_training_data">Problem deleting data, please try again</string>
    <string name="javabot_image_description">JavaBot Image</string>
    <string name="menu_action_settings">Settings</string>
    <string name="refresh_options_menu">refresh</string>

    <!-- Alert dialog -->
    <string name="remove_training_data_message">Remove all training data?</string>
    <string name="training_data_title">Training Data</string>
    <string name="training_data_deleted">Training data deleted</string>
    <string name="alert_dialog_training_positive">yes</string>
    <string name="alert_dialog_training_negative">no</string>
    <string name="alert_dialog_no_connection_positive">continue</string>
    <string name="alert_dialog_no_connection_negative">close</string>
    <string name="alert_dialog_no_connection_title">No Network Connection</string>
    <string name="alert_dialog_no_connection_message">There is no network connection, some features of the app may not work</string>


</resources>
