<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/setup_txt_setup_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/textView"
        android:layout_marginStart="152dp"
        android:layout_marginTop="76dp"
        android:text="@string/setup_header"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <Switch
        android:id="@+id/setup_txt_notifications_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/setup_txt_setup_header"
        android:layout_marginStart="88dp"
        android:layout_marginTop="46dp"
        android:text="@string/notifications_placeholder" />

    <Button
        android:id="@+id/setup_btn_clear_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/setup_txt_notifications_switch"
        android:layout_below="@+id/setup_txt_notifications_switch"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="77dp"
        android:text="@string/clear_data_btn" />

</RelativeLayout>