<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="@color/activityBackground">

    <TextView
        android:id="@+id/tech_meetups_txt_user_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tech_meetups_txt_your_location"
        android:layout_centerHorizontal="true"
        android:text="@string/my_address_hint"
        android:textColor="@color/techMeetupsUserAddress" />

    <TextView
        android:id="@+id/tech_meetups_txt_your_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tech_meetups_page_header"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:text="@string/your_location"
        android:textColor="@color/techMeetupsYourLocation"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tech_meetups_page_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tech_meetups_txt_api_response"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="58dp"
        android:text="@string/menu_action_tech_meetups"
        android:textColor="@color/techMeetupsHeader"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tech_meetups_txt_api_response"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.113"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="210dp" />

    <ProgressBar
        android:id="@+id/tech_meetups_pb_progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="33dp"
        android:layout_height="29dp"
        android:layout_alignBottom="@+id/tech_meetups_txt_loading_message"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="26dp" />

    <TextView
        android:id="@+id/tech_meetups_txt_loading_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/scrollView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="77dp"
        android:text="@string/tech_meetups_error_message"
        android:textColor="@color/connectingToDatabaseMessage" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="215dp">

        <LinearLayout
            android:id="@+id/tech_meetups_ll_meetup_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="25dp"
            android:layout_marginStart="25dp"
            android:orientation="vertical"
            android:paddingHorizontal="10dp"
            android:paddingVertical="10dp">

        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/tech_meetups_txt_city_not_found"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tech_meetups_txt_loading_message"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="12dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/city_placeholder"
        android:textAlignment="center"
        android:textColor="@color/noTechMeetupsMessage"
        android:visibility="invisible" />

</RelativeLayout>