<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_cl_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="abertay.ac.uk.java_bot_app.MainActivity">

    <ImageView
        android:id="@+id/main_img_java_bot"
        android:layout_width="77dp"
        android:layout_height="86dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="JavaBot Image"
        app:layout_constraintEnd_toStartOf="@+id/main_txt_welcome_message"
        app:layout_constraintHorizontal_bias="0.803"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/img_java_bot_foreground" />

    <TextView
        android:id="@+id/main_txt_welcome_message"
        android:layout_width="180dp"
        android:layout_height="65dp"
        android:layout_marginEnd="48dp"
        android:layout_marginTop="28dp"
        android:text="@string/welcome_messsage"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/main_et_question_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:layout_marginStart="28dp"
        android:background="@android:color/darker_gray"
        android:ems="10"
        android:hint="@string/enter_question"
        android:inputType="text"
        android:outlineProvider="bounds"
        android:selectAllOnFocus="false"
        android:singleLine="false"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/main_btn_ask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/ask_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/main_et_question_field" />

    <LinearLayout
        android:id="@+id/main_ll_question_layout"
        android:layout_width="352dp"
        android:layout_height="328dp"
        android:layout_marginEnd="100dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_img_java_bot"></LinearLayout>


</android.support.constraint.ConstraintLayout>
